fix spacing issues

--- a/theme/src/scss/parts/_featured-hero.scss
+++ b/theme/src/scss/parts/_featured-hero.scss
@@ -45,7 +45,7 @@
     }
 
     h1:after {    
-        margin-bottom: 0;
+        margin-bottom: 0 !important;
     }
 
 
