--- a/theme/src/scss/templates/_archive-work.scss
+++ b/theme/src/scss/templates/_archive-work.scss
@@ -1,3 +1,8 @@
+.archive-work__header {
+    margin-bottom: 20px;;
+
+}
+
 .archive-work-card__layout {
     width: 100%;
 }
